# openal-svn-mirror

./: CREDITS  INSTALL  README
OpenAL-Sample/: .cvsignore  CMakeLists.txt  ChangeLog  Makefile.am  README  TODO  config-osx.h  configure.ac
OpenAL-Sample/admin/CMakeModules/: CMakeASMCompiler.cmake.in  CMakeASMInformation.cmake  CMakeDetermineASMCompiler.cmake  CMakeTestASMCompiler.cmake  CompilerAttribute.cmake  CompilerFlagsSet.cmake  CompilerSIMD.cmake  CompilerVisibility.cmake  FindCompilerFlagsSet.cmake  FindCompilerMMXFlag.cmake  FindCompilerVisibility.cmake  FindOpenALBackends.cmake  FindPkgConfig.cmake  FindSelectArgtypes.cmake  FindSleepFunction.cmake
OpenAL-Sample/admin/RPM/: .cvsignore  openal.spec.in  openal.xpm
OpenAL-Sample/admin/autotools/: .indent.pro
OpenAL-Sample/admin/pkgconfig/: Makefile.am  openal.pc.in
OpenAL-Sample/common/: Makefile.am
OpenAL-Sample/common/include/: Makefile.am
OpenAL-Sample/doc/: EXT_vorbis  LOKI_quadriphonic  openal.texi
OpenAL-Sample/src/: Makefile.am  al_bpool.c  al_bpool.h  al_buffer.c  al_buffer.h  al_config.c  al_config.h  al_cpu_caps.h  al_debug.c  al_distance.c  al_distance.h  al_dlopen.c  al_dlopen.h  al_ext.c  al_ext.h  al_filter.c  al_listen.c  al_main.c  al_main.h  al_matrix.c  al_matrix.h  al_mixer.c  al_mixer.h  al_mixfunc.c  al_mixfunc.h  al_mixmanager.c  al_mixmanager.h  al_mspool.c  al_mspool.h  al_mutexlib.c  al_mutexlib.h  al_queue.c  al_rctree.c  al_rctree.h  al_rcvar.c  al_rcvar.h  al_siteconfig.h  al_source.c  al_spool.c  al_state.c  (+5 more)
OpenAL-Sample/src/alc/: alc_context.c  alc_context.h  alc_device.c  alc_device.h  alc_error.c  alc_error.h
OpenAL-Sample/src/arch/: Makefile.am
OpenAL-Sample/src/audioconvert/: ac_bits.c  ac_channels.c  ac_freq.c  ac_helper.c  ac_misc.c  ac_wave.h  audioconvert.h
OpenAL-Sample/src/backends/: alc_backend.c  alc_backend.h  alc_backend_alsa.c  alc_backend_arts.c  alc_backend_bsd.c  alc_backend_darwin.c  alc_backend_esd.c  alc_backend_irix.c  alc_backend_linux.c  alc_backend_morphos.c  alc_backend_null.c  alc_backend_oss.c  alc_backend_sdl.c  alc_backend_solaris.c  alc_backend_wave.c  alc_backend_windows.c
OpenAL-Sample/src/config/: al_config.c  al_config.h  al_rctree.c  al_rctree.h  al_rcvar.c  al_rcvar.h
OpenAL-Sample/src/extensions/: al_ext_loki.c  al_ext_mp3.c  al_ext_vorbis.c
OpenAL-Sample/test/: Makefile.in  testalinitexit.c  testalut.c  testattributes.c  testbufferuniq.c  testcallback.c  testcapture.c  testcapture2.c  testchannel.c  testchannel2.c  testcpp.cc  testda.c  testdevice.c  testdoppler.c  testext.c  testgain.c  testgainlinear.c  testgendelbuffer_error.c  testgendelsource_error.c  testleak.c  testleak2.c  testlib.c  testlib.h  testlistener.c  testlistener2.c  testlistener3.c  testlistener4.c  testloop.c  testmp3.c  testmp32.c  testmulti.c  testmultialut.c  testmultichannel.c  testmulticontext.c  testmulticontext2.c  testmultimp3.c  testmultinothread.c  testnothread.c  testorient.c  testpause.c  (+20 more)
contrib/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
contrib/admin/VisualStudio6/: contrib.dsw
contrib/admin/autotools/: .indent.pro
contrib/demos/: Makefile.am
contrib/demos/panning2d/: .cvsignore  Makefile.am  panning2d.c
contrib/examples/: Makefile.am
contrib/examples/openal-info/: Makefile.am  openal-info.c
contrib/tests/: Makefile.am
contrib/tests/altest/: .cvsignore  Makefile.am  altest.c  gendocs.py
linux/: .cvsignore  AUTHORS  CMakeLists.txt  CREDITS  ChangeLog  INSTALL  INSTALL.cmake  Makefile.am  Makefile.in  NOTES  PLATFORM  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config-osx.h  configure.ac  configure.in  openal-config.in  openal.pc.in  openal.spec
linux/CMakeModules/: CMakeDetermineASMCompiler.cmake
linux/admin/: .cvsignore  openal.pc.in  openal.spec
linux/admin/CMakeModules/: CMakeASMCompiler.cmake.in  CMakeASMInformation.cmake  CMakeDetermineASMCompiler.cmake  FindCompilerAttribute.cmake  FindCompilerVisibility.cmake  FindPkgConfig.cmake  FindSelectArgtypes.cmake  FindSleepFunction.cmake  SelectArgtypes.c.in
linux/admin/RPM/: openal.spec  openal.spec.in
linux/admin/autotools/: .indent.pro
linux/admin/pkgconfig/: .cvsignore  Makefile.am  openal-config.in  openal.pc.in
linux/audioconvert/: Makefile.in  ac_adpcm.c  ac_adpcm.h  ac_bits.c  ac_channels.c  ac_endian.c  ac_endian.h  ac_format.c  ac_freq.c  ac_helper.c  ac_misc.c  ac_wave.h  audioconvert.h  test_ac.c
linux/doc/: LOKI_IMA_ADPCM_format  LOKI_WAVE_format  LOKI_buffer_data_callback  Makefile.in  openal.texi  sample.openalrc
linux/include/: Makefile.am
linux/include/AL/: Makefile.am  alext.h  alexttypes.h
linux/jlib/: Makefile.in  globals.c  hash.c  libjlib.h
linux/src/: .cvsignore  Makefile.am  Makefile.in  al_able.c  al_able.h  al_bpool.c  al_bpool.h  al_buffer.c  al_buffer.h  al_config.c  al_config.h  al_cpu_caps.h  al_debug.c  al_debug.h  al_distance.c  al_distance.h  al_doppler.c  al_doppler.h  al_error.c  al_error.h  al_ext.c  al_ext.h  al_ext_iasig.c  al_filter.c  al_filter.h  al_listen.c  al_listen.h  al_main.c  al_main.h  al_matrix.c  al_matrix.h  al_mixer.c  al_mixer.h  al_mixfunc.c  al_mixfunc.h  al_mixmanager.c  al_mixmanager.h  al_mspool.c  al_mspool.h  al_mutexlib.c  (+23 more)
linux/src/alc/: alc_context.c  alc_context.h  alc_device.c  alc_device.h  alc_error.c  alc_error.h  alc_speaker.c  alc_speaker.h
linux/src/alut/: alut_imaadpcm.c  alut_main.c  alut_msadpcm.c  alut_wav.c  (+1 more)
linux/test/: .cvsignore  .indent.pro  Makefile.in  testalinitexit.c  testalut.c  testattributes.c  testbufferuniq.c  testcallback.c  testcapture.c  testcapture2.c  testchannel.c  testchannel2.c  testda.c  testdevice.c  testdoppler.c  testext.c  testgain.c  testgainlinear.c  testgendelbuffer_error.c  testgendelsource_error.c  testleak.c  testleak2.c  testlib.c  testlib.h  testlistener.c  testlistener2.c  testlistener3.c  testlistener4.c  testloop.c  testmath.c  testmp3.c  testmp32.c  testmulti.c  testmultialut.c  testmultichannel.c  testmulticontext.c  testmulticontext2.c  testmultimp3.c  testmultinothread.c  testnothread.c  (+21 more)
(+334 files in other folders)
